<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agencia de tutismo paisa travel"
        android:gravity="center"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">


        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:text="@string/nombre"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etnombre"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_nombre"
            android:inputType="textPersonName"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">


        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:text="@string/destino"
            android:textSize="17sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/spdestino"
            android:layout_width="192dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">
        <TextView
            android:text="@string/fecha_salida"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etfecha"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:inputType="date" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">
        <TextView
            android:text="@string/numeropersonas"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/etpersonas"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/numero_personas"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:text="@string/numero_de_dias"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            >

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_marginStart="50dp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/rb6"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/_6" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionales"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        />
    <Switch
        android:id="@+id/swtourciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tour_por_la_ciudad"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/swdiscoteca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discoteca"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:text="@string/total_a_pagar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/etvtotal"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="10dp"
        >
        <Button
            android:id="@+id/btncalc"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnlimpiar"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/limpiar_informacion"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>